fixed logo and aligning

--- a/src/stylesheets/components/_footer.scss
+++ b/src/stylesheets/components/_footer.scss
@@ -11,7 +11,7 @@
 }
 
 .exploration-viget-logo {
-  margin: 15px;
+  margin: 15px 0 15px 15px;
 }
 
 .footer {
